update migration script

--- a/migrations/v1_8_1-v1_8_2.md
+++ b/migrations/v1_8_1-v1_8_2.md
@@ -4,27 +4,7 @@
 
 ### Event Time from Snapshot filenames
 
-In the v1.8.2 AWS Config DC, we now collect the `event_time` from the file name of the Config snapshots in S3 and have renamed AWS's `configurationItemCaptureTime` to be collected more clearly as `configuration_item_capture_time`.
-
-To keep Azure Config Connections working, please run a migration like the following on your landing table —
-
-~~~
-ALTER TABLE data.config_default_events_connection
-  RENAME COLUMN event_time
-             TO configuration_item_capture_time
-;
-ALTER TABLE data.config_default_events_connection
-  ADD COLUMN event_time TIMESTAMP_LTZ(9)
-;
-~~~
-
-or, if you're OK with restarting ingestion, just drop it —
-
-~~~
-DROP TABLE data.config_default_events_connection;
-~~~
-
-And recreate the connection via the Data Connector WebUI.
+In the v1.8.2 AWS Config DC, we now collect the `event_time` from the file name of the Config snapshots in S3 and have renamed AWS's `configurationItemCaptureTime` to be collected more clearly as `configuration_item_capture_time`. Due to the significance of the changes, the only way to migrate is to re-create the collection architecture.
 
 If you'd like to delete the Data Connector entirely you can do so a snippet like —
 
@@ -35,13 +15,7 @@ DROP STAGE data.config_default_events_stage;
 DROP TABLE data.config_default_events_staging;
 DROP STREAM data.config_default_events_stream;
 DROP TASK data.config_default_events_task;
+DROP TABLE data.config_default_events_connection;
 ~~~
 
-### Corrected Base Name
-
-The landing table is now named similarly to others to start with the `aws_config` prefix, matching the Python module. This change does not yet affect anything, but can be migrated by deleting and re-creating the ingestion pipeline as above and renaming the landing table with.
-
-~~~
-ALTER TABLE data.config_default_events_pipe
-  RENAME TO data.aws_config_default_events_pipe;
-~~~
+And recreate the connection via the Data Connector WebUI. Note that we've also updated the landing table and prefix to include "`aws_`" at the start, so that all your AWS landing tables line up alphabetically!
