[DC] Adds migration description for AWS CloudTrail and Azure log data Connections

--- a/migrations/v1_8_1-v1_8_2.md
+++ b/migrations/v1_8_1-v1_8_2.md
@@ -1,4 +1,4 @@
-## AWS Config Data Connector
+## AWS Config Data Connections
 
 > Note: we say "like" below because if you set a custom name on your AWS Config Data Connector, you'll need to replace `default` in the above snippets with that custom name.
 
@@ -19,3 +19,11 @@ DROP TABLE data.config_default_events_connection;
 ~~~
 
 And recreate the connection via the Data Connector WebUI. Note that we've also updated the landing table and prefix to include "`aws_`" at the start, so that all your AWS landing tables line up alphabetically!
+
+## AWS CloudTrail Data Connections
+
+Similarly to the Config Data Connector, the CloudTrail connector now has a "`aws_`" prefix and needs to be re-created if you'd like to keep it up to date. Failing to do so has no effect in version v1.8 and will be backwards compatible with future releases, but will look different than future AWS CT Data Connections.
+
+## Azure Log Data Connections
+
+The Azure Log data connection table will now refer correctly to the `azure_log` module. In order to update your v1.7 tables, please change the comment to include "`module: azure_log`".
