Minor misc fixes before release

--- a/migrations/v1_8_1-v1_8_2.md
+++ b/migrations/v1_8_1-v1_8_2.md
@@ -27,3 +27,7 @@ Similarly to the Config Data Connector, the CloudTrail connector now has a "`aws
 ## Azure Log Data Connections
 
 The Azure Log data connection table will now refer correctly to the `azure_log` module. In order to update your v1.7 tables, please change the comment to include "`module: azure_log`".
+
+## AWS Asset Ingestion now Inventory
+
+We've renamed the `aws_asset_ingest` Data Connector to align with the others as `aws_inventory`.
