Review from Andrey

--- a/migrations/v1_8_3-v1_8_4.md
+++ b/migrations/v1_8_3-v1_8_4.md
@@ -2,20 +2,26 @@
 
 > Note: we say "like" below because if you set a custom name on your AWS Config Data Connector, you'll need to replace `default` in the above snippets with that custom name.
 
-### File Ingestion
+### Removing Ingestion Runtime
 
-In the v1.8.3 Azure Log DC, we now ingest data using an external table over the Azure Stage; this removes our need to store credentials and call the Azure API, as well as allows us to ingest logs at the event level as opposed to the file level.
+In the v1.8.3 Azure Log DC, we ingest data using an external table over the Azure Stage, which allows us to ingest logs without a runtime piece and also logs that were appended to existing files.
 
 If you'd like to migrate the Azure Log DC, you can do so with a snippet like —
 
 ~~~
 USE ROLE snowalert;
+
 DROP PIPE data.azure_log_default_operation_default_pipe;
 DROP STAGE data.azure_log_default_operation_default_stage;
+
 ALTER TABLE data.azure_log_default_operation_connection SET COMMENT='
 ---
 module: azure_log
 ';
+
+ALTER TABLE data.azure_log_default_operation_default_pipe
+   RENAME COLUMN properties_resource_locaation
+              TO properties_resource_location;
 ~~~
 
 And recreate the connection via the Data Connector WebUI. Since you are not dropping the connection table, you will not lose any of your historical data. When dropping an Azure Log DC, make sure that you specify both the log type (operation | signin | audit) and the custom name for your connector.
