edits intro sentence

--- a/migrations/v1_8_3-v1_8_4.md
+++ b/migrations/v1_8_3-v1_8_4.md
@@ -1,10 +1,11 @@
 ## Azure Log Connector
 
-> Note: we say "like" below because if you set a custom name on your AWS Config Data Connector, you'll need to replace `default` in the above snippets with that custom name.
+> Note: we say "like" below because the sql script will need the correct names of the resources; make sure that you specify both the log type (operation | signin | audit) and the custom name for your connector.
+
 
 ### Removing Ingestion Runtime
 
-In the v1.8.3 Azure Log DC, we ingest data using an external table over the Azure Stage, which allows us to ingest logs without a runtime piece and also logs that were appended to existing files.
+In the v1.8.4 Azure Log DC, we ingest data using an external table over the Azure Stage, which allows us to ingest logs without a runtime piece and also logs that were appended to existing files.
 
 If you'd like to migrate the Azure Log DC, you can do so with a snippet like —
 
@@ -24,4 +25,4 @@ ALTER TABLE data.azure_log_default_operation_default_connection
               TO properties_resource_location;
 ~~~
 
-And recreate the connection via the Data Connector WebUI. Since you are not dropping the connection table, you will not lose any of your historical data. When dropping an Azure Log DC, make sure that you specify both the log type (operation | signin | audit) and the custom name for your connector.
+And recreate the connection via the Data Connector WebUI. Since you are not dropping the connection table, you will not lose any of your historical data.
