adds migration details

--- a/migrations/v1_8_4-v1_8_5.md
+++ b/migrations/v1_8_4-v1_8_5.md
@@ -22,3 +22,33 @@ ALTER TABLE data.okta_default_groups_connection SET COMMENT='
 <the comment from your data.okta_default_connection table
 '
 ~~~
+
+## Azure Subscription Connector
+
+### Supporting Gov Cloud
+
+In the v1.8.5 Azure Subscription DC, we support both commercial and governemnt cloud. This support is enabled with an extra connection option (cloud_type: reg for commercial, cloud_type: gov for government) that must be added to your connection table, like so.
+
+~~~
+USE ROLE snowalert;
+
+SHOW TABLES LIKE 'azure_subscription%' IN DATA; --This gets you the comment for the table.
+
+ALTER TABLE data.azure_subscription_default_connection SET COMMENT='
+---
+module: azure_subscription
+cloud_type: reg
+client_id: <CLIENT_ID>
+tenant_id: <TENANT_ID>
+client_secret: <CLIENT_SECRET>
+';
+
+ALTER TABLE data.azure_subscription_default_gov_connection SET COMMENT='
+---
+module: azure_subscription
+cloud_type: gov
+client_id: <CLIENT_ID>
+tenant_id: <TENANT_ID>
+client_secret: <CLIENT_SECRET>
+';
+~~~
