Finish migration exposition

--- a/migrations/v1_8_5-v1_8_6.md
+++ b/migrations/v1_8_5-v1_8_6.md
@@ -16,8 +16,6 @@ Once the connection table is dropped, you can recreate the connector using the U
 
 ## Cisco Umbrella Connector
 
+### Landing table name changed
 
-### Changing the landing table name for the Cisco Umbrella Connector
-
-Naming the table in a way that specifies that this is an inventory of roaming clients.
-
+We're renaming the table in a way that specifies that this is an inventory of roaming clients. There's no specific reaon to migrate but if you'd like to keep things tidy, please prepend `cisco_umbrella_` instead of `cisco_` to your landing tables.
