adds sql to migration script

--- a/migrations/v1_8_5-v1_8_6.md
+++ b/migrations/v1_8_5-v1_8_6.md
@@ -18,4 +18,9 @@ Once the connection table is dropped, you can recreate the connector using the U
 
 ### Landing table name changed
 
-We're renaming the table in a way that specifies that this is an inventory of roaming clients. There's no specific reaon to migrate but if you'd like to keep things tidy, please prepend `cisco_umbrella_` instead of `cisco_` to your landing tables.
+We're renaming the table in a way that specifies that this is an inventory of roaming clients. There's no specific reaon to migrate but if you'd like to keep things tidy, please prepend `cisco_umbrella_` instead of `cisco_` to your landing tables with sql like the following:
+
+~~~
+ALTER TABLE snowalert.data.cisco_umbrella_default_connection RENAME TO snowalert.data.cisco_umbrella_devices_default_connection;
+~~~
+
