[DC] Improves AWS Inventory Connector (#303)

--- a/migrations/v1_8_5-v1_8_6.md
+++ b/migrations/v1_8_5-v1_8_6.md
@@ -1,6 +1,26 @@
+## AWS Accounts Connector
+
+In v1.8.6 the AWS Accounts DC has been adjusted so that the Account ID is represented as a string as opposed to a number. This will necessitate dropping and recreating the connector to get the correct table, which can be done with sql like the snippet below:
+
+> Note: we say "like" below because the sql script will need the correct names of the resources; make sure that you specify the custom name for your connector, if you provided one.
+
+
+### Removing the AWS Accounts Connector
+
+~~~
+DROP TABLE snowalert.data.AWS_ACCOUNTS_DEFAULT_CONNECTION;
+~~~
+
+Once the connection table is dropped, you can recreate the connector using the UI.
+
+
 ## Cisco Umbrella Connector
 
+### Landing table name changed
 
-### Changing the landing table name for the Cisco Umbrella Connector
+We're renaming the table in a way that specifies that this is an inventory of roaming clients. There's no specific reaon to migrate but if you'd like to keep things tidy, please prepend `cisco_umbrella_` instead of `cisco_` to your landing tables with sql like the following:
 
-Naming the table in a way that specifies that this is an inventory of roaming clients.
+~~~
+ALTER TABLE snowalert.data.cisco_umbrella_default_connection RENAME TO snowalert.data.cisco_umbrella_devices_default_connection;
+~~~
+
