[dc] refactor and debug aws collect

--- a/migrations/v1_9_0-v1_9_1.md
+++ b/migrations/v1_9_0-v1_9_1.md
@@ -14,3 +14,52 @@ AS '
 '
 ;
 ~~~
+
+## Update AWS Collect landing tables
+
+Note: the below commands refer to default table names, please add the custom connection name if you set it.
+
+There were more fixes to this connector than we anticipated, so we recommend simply re-creating these connections.
+Please reach out if you're not sure how to go about this. If you absolutely must retain the data that was collected
+earlier, the following migration should help:
+
+~~~
+ALTER TABLE data.aws_collect_grants
+  RENAME TO aws_collect_iam_get_credential_report
+;
+ALTER TABLE data.aws_collect_ec2_describe_instances
+  ADD COLUMN requester_id STRING
+;
+ALTER TABLE data.aws_collect_iam_list_users
+  ADD COLUMN tags VARIANT
+;
+ALTER TABLE data.aws_collect_iam_list_users
+  ADD COLUMN permissions_boundary VARIANT
+;
+ALTER TABLE data.aws_collect_iam_list_policies
+  ADD COLUMN description STRING
+;
+ALTER TABLE data.aws_collect_s3_get_bucket_acl
+  DROP COLUMN owner
+;
+ALTER TABLE data.aws_collect_iam_list_policies
+  RENAME COLUMN arn TO policy_arn
+;
+ALTER TABLE data.aws_collect_iam_list_virtual_mfa_devices
+  ADD COLUMN enable_date TIMESTAMP_NTZ
+;
+ALTER TABLE data.aws_collect_cloudtrail_describe_trails
+  ADD COLUMN has_insight_selectors BOOLEAN
+;
+ALTER TABLE data.aws_collect_cloudtrail_get_event_selectors
+  ADD COLUMN exclude_management_event_sources VARIANT
+;
+ALTER TABLE data.aws_collect_kms_get_key_rotation_status
+  ADD COLUMN key_arn STRING
+;
+ALTER TABLE data.aws_collect_s3_get_bucket_policy
+  ADD COLUMN policy_json_parsed VARIANT
+;
+~~~
+
+This does not migrate some of the table column types, but should get you to a working state.
