[dc] Add region col to v1.9.1 migration

--- a/migrations/v1_9_0-v1_9_1.md
+++ b/migrations/v1_9_0-v1_9_1.md
@@ -57,6 +57,39 @@ ALTER TABLE data.aws_collect_kms_get_key_rotation_status
 ALTER TABLE data.aws_collect_s3_get_bucket_policy
   ADD COLUMN policy_json_parsed VARIANT
 ;
+ALTER TABLE aws_collect_ec2_describe_instances
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_ec2_describe_security_groups
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_config_describe_configuration_recorders
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_kms_list_keys
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_kms_get_key_rotation_status
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_s3_list_buckets
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_s3_get_bucket_acl
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_s3_get_bucket_policy
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_s3_get_bucket_logging
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_cloudtrail_describe_trails
+ADD COLUMN region STRING
+;
+ALTER TABLE aws_collect_cloudtrail_get_trail_status
+ADD COLUMN region STRING
+;
 ~~~
 
 This does not migrate some of the table column types, but should get you to a working state.
