[dc] Adds role policies to AWC Collect

--- a/migrations/v1_9_1-v1_9_2.md
+++ b/migrations/v1_9_1-v1_9_2.md
@@ -24,5 +24,26 @@ CREATE TABLE data.aws_collect_iam_list_roles (
   role_last_used VARIANT
 )
 ;
+GRANT SELECT, INSERT ON data.aws_collect_iam_list_roles TO ROLE snowalert;
+
+CREATE TABLE data.aws_collect_iam_list_role_policies (
+  recorded_at TIMESTAMP_LTZ,
+  account_id STRING,
+  role_name STRING,
+  policy_name STRING
+)
+;
+GRANT SELECT, INSERT ON data.aws_collect_iam_list_role_policies TO ROLE snowalert;
+
+CREATE TABLE data.aws_collect_iam_get_role_policy (
+  recorded_at TIMESTAMP_LTZ,
+  account_id STRING,
+  role_name STRING,
+  policy_name STRING,
+  policy_document STRING
+)
+;
+GRANT SELECT, INSERT ON data.aws_collect_iam_get_role_policy TO ROLE snowalert;
+
 ~~~
 
