--- a/migrations/v1_9_2-v1_9_3.md
+++ b/migrations/v1_9_2-v1_9_3.md
@@ -46,5 +46,40 @@ CREATE OR REPLACE TABLE data.azure_collect_service_principals COPY GRANTS (
   tags VARIANT
 )
 ;
+
+CREATE TABLE data.aws_collect_inspector_list_findings (
+  account_id STRING,
+  region STRING,
+  recorded_at TIMESTAMP_LTZ,
+  finding_arns VARIANT
+)
+;
+GRANT SELECT, INSERT ON data.aws_collect_inspector_list_findings TO ROLE snowalert;
+
+CREATE TABLE data.aws_collect_inspector_describe_findings (
+  account_id STRING,
+  region STRING,
+  recorded_at TIMESTAMP_LTZ,
+  finding_arns VARIANT,
+  failed_items VARIANT,
+  arn STRING,
+  asset_attributes VARIANT,
+  asset_type STRING,
+  attributes VARIANT,
+  confidence INT,
+  created_at TIMESTAMP_LTZ,
+  description STRING,
+  indicator_of_compromise BOOLEAN,
+  numeric_severity FLOAT,
+  recommendation STRING,
+  schema_version INT,
+  service STRING,
+  service_attributes VARIANT,
+  severity STRING,
+  title STRING,
+  user_attributes VARIANT
+)
+;
+GRANT SELECT, INSERT ON data.aws_collect_inspector_describe_findings TO ROLE snowalert;
 ~~~
 
