--- a/migrations/v1_9_2-v1_9_3.md
+++ b/migrations/v1_9_2-v1_9_3.md
@@ -1,4 +1,4 @@
-## Update Azure Inventory and Configuration Connections
+## Update AWS and Azure Inventory and Configuration Connections
 
 Note: the below commands refer to default table names, please add the custom connection name if you set it.
 
@@ -63,23 +63,25 @@ CREATE TABLE data.aws_collect_inspector_describe_findings (
   finding_arns VARIANT,
   failed_items VARIANT,
   arn STRING,
-  asset_attributes VARIANT,
-  asset_type STRING,
-  attributes VARIANT,
-  confidence INT,
-  created_at TIMESTAMP_LTZ,
-  description STRING,
-  indicator_of_compromise BOOLEAN,
-  numeric_severity FLOAT,
-  recommendation STRING,
-  schema_version INT,
+  schema_version INTEGER,
   service STRING,
   service_attributes VARIANT,
-  severity STRING,
+  asset_type STRING,
+  asset_attributes VARIANT,
+  id STRING,
   title STRING,
-  user_attributes VARIANT
+  description STRING,
+  recommendation STRING,
+  severity STRING,
+  numeric_severity DOUBLE,
+  confidence INTEGER,
+  indicator_of_compromise BOOLEAN,
+  attributes VARAINT,
+  user_attributes VARIANT,
+  created_at TIMESTAMP_NTZ,
+  updated_at TIMESTAMP_NTZ
 )
 ;
-GRANT SELECT, INSERT ON data.aws_collect_inspector_describe_findings TO ROLE snowalert;
+GRANT SELECT, INSERT ON data.aws_collect_inspector_describe_findings TO ROLE app_snowalert;
 ~~~
 
