--- a/migrations/v1_9_3-v1_9_4.md
+++ b/migrations/v1_9_3-v1_9_4.md
@@ -5,9 +5,8 @@ Note: the below commands refer to default table names, please add the custom con
 Recreate the SP landing table to populate with new (required) columns —
 
 ~~~
-ALTER TABLE data.azure_collect_service_principals ADD COLUMN (
+ALTER TABLE data.azure_collect_service_principals ADD COLUMN
   verified_publisher VARIANT
-)
 ;
 ~~~
 
