[dc] adds Diagnostic Settings to migration docs

--- a/migrations/v1_9_3-v1_9_4.md
+++ b/migrations/v1_9_3-v1_9_4.md
@@ -11,5 +11,21 @@ ADD COLUMN verified_publisher VARIANT
 ALTER TABLE data.azure_collect_service_principals
 ADD COLUMN is_authorization_service_enabled BOOLEAN
 ;
+CREATE OR REPLACE TABLE data.azure_collect_diagnostic_settings (
+    recorded_at TIMESTAMP_LTZ,
+    resource_uri STRING,
+    tenant_id VARCHAR(50),
+    error VARIANT,
+    id STRING,
+    type STRING,
+    name STRING,
+    location STRING,
+    kind STRING,
+    tags VARIANT,
+    properties VARIANT,
+    identity VARIANT
+)
+;
+GRANT INSERT, SELECT ON data.azure_collect_diagnostic_settings TO ROLE app_snowalert;
 ~~~
 
