[dc] Add activity log alerts to Azure Collect Connector

--- a/migrations/v1_9_3-v1_9_4.md
+++ b/migrations/v1_9_3-v1_9_4.md
@@ -11,6 +11,7 @@ ADD COLUMN verified_publisher VARIANT
 ALTER TABLE data.azure_collect_service_principals
 ADD COLUMN is_authorization_service_enabled BOOLEAN
 ;
+
 CREATE OR REPLACE TABLE data.azure_collect_diagnostic_settings (
     recorded_at TIMESTAMP_LTZ,
     resource_uri STRING,
@@ -26,6 +27,29 @@ CREATE OR REPLACE TABLE data.azure_collect_diagnostic_settings (
     identity VARIANT
 )
 ;
-GRANT INSERT, SELECT ON data.azure_collect_diagnostic_settings TO ROLE app_snowalert;
+GRANT INSERT, SELECT
+ON data.azure_collect_diagnostic_settings
+TO ROLE app_snowalert
+;
+
+CREATE OR REPLACE TABLE data.azure_collect_activity_log_alerts COPY GRANTS (
+    recorded_at TIMESTAMP_LTZ,
+    subscription_id VARCHAR(50),
+    tenant_id VARCHAR(50),
+    error VARIANT,
+    id STRING,
+    location STRING,
+    name STRING,
+    properties VARIANT,
+    tags VARIANT,
+    type STRING,
+    kind STRING,
+    identity STRING
+)
+;
+GRANT SELECT, INSERT
+ON data.azure_collect_activity_log_alerts
+TO ROLE app_snowalert
+;
 ~~~
 
