[dc] Add VM Instance views to azure_collect.py

--- a/migrations/v1_9_3-v1_9_4.md
+++ b/migrations/v1_9_3-v1_9_4.md
@@ -27,7 +27,7 @@ CREATE OR REPLACE TABLE data.azure_collect_diagnostic_settings (
     identity VARIANT
 )
 ;
-GRANT INSERT, SELECT
+GRANT SELECT, INSERT
 ON data.azure_collect_diagnostic_settings
 TO ROLE app_snowalert
 ;
@@ -49,6 +49,32 @@ CREATE OR REPLACE TABLE data.azure_collect_activity_log_alerts COPY GRANTS (
 ;
 GRANT SELECT, INSERT
 ON data.azure_collect_activity_log_alerts
+TO ROLE app_snowalert
+;
+
+CREATE OR REPLACE TABLE data.azure_collect_virtual_machines_instance_view COPY GRANTS (
+    recorded_at TIMESTAMP_LTZ,
+    tenant_id VARCHAR(50),
+    subscription_id VARCHAR(50),
+    vm_id VARCHAR(500),
+    error VARIANT,
+    boot_diagnostics VARIANT,
+    computer_name STRING,
+    disks VARIANT,
+    extensions VARIANT,
+    hyper_v_generation VARCHAR(10),
+    maintenance_redeploy_status VARIANT,
+    os_name STRING,
+    os_version STRING,
+    platform_fault_domain NUMBER,
+    platform_update_domain NUMBER,
+    rdp_thumb_print STRING,
+    statuses VARIANT,
+    vm_agent VARIANT
+)
+;
+GRANT SELECT, INSERT
+ON data.azure_collect_virtual_machines_instance_view
 TO ROLE app_snowalert
 ;
 ~~~
