[dc] Adds VM Extensions to azure_collect

--- a/migrations/v1_9_3-v1_9_4.md
+++ b/migrations/v1_9_3-v1_9_4.md
@@ -77,5 +77,23 @@ GRANT SELECT, INSERT
 ON data.azure_collect_virtual_machines_instance_view
 TO ROLE app_snowalert
 ;
-~~~
 
+CREATE OR REPLACE TABLE data.azure_collect_virtual_machines_extensions COPY GRANTS (
+    recorded_at TIMESTAMP_LTZ,
+    tenant_id VARCHAR(50),
+    subscription_id VARCHAR(50),
+    vm_id VARCHAR(500),
+    error VARIANT,
+    id STRING,
+    location STRING,
+    name STRING,
+    properties VARIANT,
+    tags VARIANT,
+    type STRING
+)
+;
+GRANT SELECT, INSERT
+ON data.azure_collect_virtual_machines_extensions
+TO ROLE app_snowalert
+;
+~~~
