[dc] Add new Azure Collect columns

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -39,11 +39,16 @@ ALTER TABLE aws_collect_s3_get_bucket_policy ADD COLUMN error VARIANT;
 ALTER TABLE aws_collect_s3_list_buckets ADD COLUMN error VARIANT;
 ~~~
 
-
 ~~~
 ALTER TABLE azure_collect_groups ADD COLUMN expiration TIMESTAMP_LTZ;
 ALTER TABLE azure_collect_groups ADD COLUMN membership_rule STRING;
 ALTER TABLE azure_collect_groups ADD COLUMN membership_rule_processing_state STRING;
 ALTER TABLE azure_collect_groups ADD COLUMN preferred_language STRING;
 ALTER TABLE azure_collect_groups ADD COLUMN theme STRING;
+~~~
+
+~~~
+ALTER TABLE azure_collect_service_principals ADD COLUMN app_description STRING;
+ALTER TABLE azure_collect_service_principals ADD COLUMN description STRING;
+ALTER TABLE azure_collect_service_principals ADD COLUMN notes STRING;
 ~~~
