[dc] Add az group_members endpoint

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -52,3 +52,28 @@ ALTER TABLE azure_collect_service_principals ADD COLUMN app_description STRING;
 ALTER TABLE azure_collect_service_principals ADD COLUMN description STRING;
 ALTER TABLE azure_collect_service_principals ADD COLUMN notes STRING;
 ~~~
+
+~~~
+CREATE OR REPLACE TABLE azure_collect_groups_members (
+    recorded_at TIMESTAMP_LTZ,
+    tenant_id VARCHAR(50),
+    group_id VARCHAR(50),
+    error VARIANT,
+    id VARCHAR(50),
+    odata_type VARIANT,
+    business_phones VARIANT,
+    display_name VARCHAR(1000),
+    given_name VARCHAR(1000),
+    job_title VARCHAR(1000),
+    mail VARCHAR(1000),
+    mobile_phone VARCHAR(1000),
+    office_location VARCHAR(1000),
+    preferred_language VARCHAR(1000),
+    surname VARCHAR(1000),
+    user_principal_name VARCHAR(1000),
+    header_date TIMESTAMP_LTZ,
+    deleted TIMESTAMP_LTZ
+)
+;
+GRANT SELECT, INSERT ON TABLE azure_collect_groups_members TO ROLE app_snowalert;
+~~~
