[dc] Az group_collect bug fixes

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -60,7 +60,7 @@ CREATE OR REPLACE TABLE azure_collect_groups_members (
     group_id VARCHAR(50),
     error VARIANT,
     id VARCHAR(50),
-    odata_type VARIANT,
+    odata_type VARCHAR(100),
     business_phones VARIANT,
     display_name VARCHAR(1000),
     given_name VARCHAR(1000),
@@ -72,6 +72,7 @@ CREATE OR REPLACE TABLE azure_collect_groups_members (
     surname VARCHAR(1000),
     user_principal_name VARCHAR(1000),
     header_date TIMESTAMP_LTZ,
+    created TIMESTAMP_LTZ,
     deleted TIMESTAMP_LTZ
 )
 ;
