[dc] Fix collect Az groups with subgroups

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -61,19 +61,7 @@ CREATE OR REPLACE TABLE azure_collect_groups_members (
     error VARIANT,
     id VARCHAR(50),
     odata_type VARCHAR(100),
-    business_phones VARIANT,
-    display_name VARCHAR(1000),
-    given_name VARCHAR(1000),
-    job_title VARCHAR(1000),
-    mail VARCHAR(1000),
-    mobile_phone VARCHAR(1000),
-    office_location VARCHAR(1000),
-    preferred_language VARCHAR(1000),
-    surname VARCHAR(1000),
-    user_principal_name VARCHAR(1000),
-    header_date TIMESTAMP_LTZ,
-    created TIMESTAMP_LTZ,
-    deleted TIMESTAMP_LTZ
+    raw VARIANT
 )
 ;
 GRANT SELECT, INSERT ON TABLE azure_collect_groups_members TO ROLE app_snowalert;
