[dc] Fix az govcloud, azure_collect bugs
- gov has separate auth endpoint that was not working
- empty lists handled better
- added missing columns

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -40,6 +40,14 @@ ALTER TABLE aws_collect_s3_list_buckets ADD COLUMN error VARIANT;
 ~~~
 
 ~~~
+ALTER TABLE azure_collect_connection ADD COLUMN error VARIANT;
+~~~
+
+~~~
+ALTER TABLE azure_collect_role_definitions ADD COLUMN display_name STRING;
+~~~
+
+~~~
 ALTER TABLE azure_collect_groups ADD COLUMN expiration TIMESTAMP_LTZ;
 ALTER TABLE azure_collect_groups ADD COLUMN membership_rule STRING;
 ALTER TABLE azure_collect_groups ADD COLUMN membership_rule_processing_state STRING;
