[dc] Add az role assignments

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -74,3 +74,18 @@ CREATE OR REPLACE TABLE azure_collect_groups_members (
 ;
 GRANT SELECT, INSERT ON TABLE azure_collect_groups_members TO ROLE app_snowalert;
 ~~~
+
+~~~
+CREATE OR REPLACE TABLE azure_collect_role_assignments (
+    recorded_at TIMESTAMP_LTZ,
+    tenant_id VARCHAR(50),
+    subscription_id VARCHAR(50),
+    error VARIANT,
+    id VARCHAR(5000),
+    type VARCHAR(5000),
+    name VARCHAR(5000),
+    properties VARIANT
+)
+;
+GRANT SELECT, INSERT ON TABLE azure_collect_role_assignments TO ROLE app_snowalert;
+~~~
