--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -89,3 +89,29 @@ CREATE OR REPLACE TABLE azure_collect_role_assignments (
 ;
 GRANT SELECT, INSERT ON TABLE azure_collect_role_assignments TO ROLE app_snowalert;
 ~~~
+
+~~~
+CREATE OR REPLACE TABLE aws_collect_iam_list_groups (
+    recorded_at TIMESTAMP_LTZ,
+    error VARIANT,
+    account_id STRING,
+    path STRING,
+    group_id STRING,
+    group_name STRING,
+    arn STRING,
+    create_date TIMESTAMP_LTZ
+)
+;
+GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_groups TO ROLE app_snowalert;
+
+CREATE OR REPLACE TABLE aws_collect_iam_list_attached_group_policies (
+    recorded_at TIMESTAMP_LTZ,
+    error VARIANT,
+    account_id STRING,
+    group_name STRING,
+    policy_name STRING,
+    policy_arn STRING
+)
+;
+GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_attached_group_policies TO ROLE app_snowalert;
+~~~
