--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -115,3 +115,19 @@ CREATE OR REPLACE TABLE aws_collect_iam_list_attached_group_policies (
 ;
 GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_attached_group_policies TO ROLE app_snowalert;
 ~~~
+
+
+CREATE OR REPLACE TABLE aws_collect_ec2_describe_route_tables (
+	recorded_at TIMESTAMP_LTZ,
+	error VARIANT,
+	account_id' STRING,
+        region STRING,
+        groups VARIANT,
+        instances VARIANT,
+        owner_id STRING,
+        requester_id STRING,
+        reservation_id STRING	
+);
+GRANT SELECT, INSERT ON TABLE aws_collect_ec2_describe_route_tables TO ROLE app_snowalert;
+
+~~~
