--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -120,7 +120,7 @@ GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_attached_group_policies TO RO
 CREATE OR REPLACE TABLE aws_collect_ec2_describe_route_tables (
 	recorded_at TIMESTAMP_LTZ,
 	error VARIANT,
-	account_id' STRING,
+	account_id STRING,
         region STRING,
         groups VARIANT,
         instances VARIANT,
