--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -120,6 +120,8 @@ GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_attached_group_policies TO RO
 CREATE OR REPLACE TABLE aws_collect_ec2_describe_route_tables (
     recorded_at TIMESTAMP_LTZ,
     error VARIANT,
+    account_id STRING, 
+    region STRING, 
     associations VARIANT,
     propagating_vgws VARIANT, 
     route_table_id STRING, 
