[dc] Fix column in AzIC

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -115,3 +115,7 @@ CREATE OR REPLACE TABLE aws_collect_iam_list_attached_group_policies (
 ;
 GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_attached_group_policies TO ROLE app_snowalert;
 ~~~
+
+~~~
+ALTER TABLE azure_collect_virtual_machines_extensions DROP COLUMN subscription_id;
+~~~
