--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -117,5 +117,23 @@ GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_attached_group_policies TO RO
 ~~~
 
 ~~~
+CREATE OR REPLACE TABLE aws_collect_ec2_describe_route_tables (
+    recorded_at TIMESTAMP_LTZ,
+    error VARIANT,
+    account_id STRING, 
+    region STRING, 
+    associations VARIANT,
+    propagating_vgws VARIANT, 
+    route_table_id STRING, 
+    routes VARIANT,
+    tags VARIANT,
+    vpc_id STRING,
+    owner_id STRING	
+);
+GRANT SELECT, INSERT ON TABLE aws_collect_ec2_describe_route_tables TO ROLE app_snowalert;
+~~~
+
+~~~
 ALTER TABLE azure_collect_virtual_machines_extensions DROP COLUMN subscription_id;
+ALTER TABLE azure_collect_virtual_machines_instance_view DROP COLUMN subscription_id;
 ~~~
