[dc] Fixes column misnaming in AzCIS

--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -134,6 +134,7 @@ GRANT SELECT, INSERT ON TABLE aws_collect_ec2_describe_route_tables TO ROLE app_
 ~~~
 
 ~~~
+ALTER TABLE azure_collect_disks RENAME COLUMN managedby TO managed_by;
 ALTER TABLE azure_collect_virtual_machines_extensions DROP COLUMN subscription_id;
 ALTER TABLE azure_collect_virtual_machines_instance_view DROP COLUMN subscription_id;
 ~~~
