--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -1,8 +1,36 @@
-## Update AWS Inventory and Configuration Connector
+## Update Azure and AWS Inventory and Configuration Connectors
 
-The new version of the connector tracks errors. If you have a deployed default connector, update it with:
+The new version of the connector tracks errors, adds columns for the most recent
+Azure Cloud changes. If you have a deployed default connector, you can update it
+with:
 
 ~~~
+ALTER TABLE azure_collect_role_definitions ADD COLUMN display_name STRING;
+
+ALTER TABLE azure_collect_groups ADD COLUMN expiration TIMESTAMP_LTZ;
+ALTER TABLE azure_collect_groups ADD COLUMN membership_rule STRING;
+ALTER TABLE azure_collect_groups ADD COLUMN membership_rule_processing_state STRING;
+ALTER TABLE azure_collect_groups ADD COLUMN preferred_language STRING;
+ALTER TABLE azure_collect_groups ADD COLUMN theme STRING;
+
+ALTER TABLE azure_collect_service_principals ADD COLUMN app_description STRING;
+ALTER TABLE azure_collect_service_principals ADD COLUMN description STRING;
+ALTER TABLE azure_collect_service_principals ADD COLUMN notes STRING;
+~~~
+
+~~~
+ALTER TABLE azure_collect_connection ADD COLUMN error VARIANT;
+ALTER TABLE azure_collect_disks RENAME COLUMN managedby TO managed_by;
+ALTER TABLE azure_collect_virtual_machines_extensions DROP COLUMN subscription_id;
+ALTER TABLE azure_collect_virtual_machines_instance_view DROP COLUMN subscription_id;
+
+ALTER TABLE aws_collect_kms_get_key_rotation_status DROP COLUMN region;
+ALTER TABLE aws_collect_s3_list_buckets DROP COLUMN region;
+ALTER TABLE aws_collect_s3_get_bucket_acl DROP COLUMN region;
+ALTER TABLE aws_collect_s3_get_bucket_policy DROP COLUMN region;
+ALTER TABLE aws_collect_s3_get_bucket_logging DROP COLUMN region;
+ALTER TABLE aws_collect_cloudtrail_describe_trails DROP COLUMN region;
+ALTER TABLE aws_collect_cloudtrail_get_event_selectors DROP COLUMN region;
 ALTER TABLE aws_collect_cloudtrail_describe_trails ADD COLUMN error VARIANT;
 ALTER TABLE aws_collect_cloudtrail_get_event_selectors ADD COLUMN error VARIANT;
 ALTER TABLE aws_collect_cloudtrail_get_trail_status ADD COLUMN error VARIANT;
@@ -40,28 +68,6 @@ ALTER TABLE aws_collect_s3_list_buckets ADD COLUMN error VARIANT;
 ~~~
 
 ~~~
-ALTER TABLE azure_collect_connection ADD COLUMN error VARIANT;
-~~~
-
-~~~
-ALTER TABLE azure_collect_role_definitions ADD COLUMN display_name STRING;
-~~~
-
-~~~
-ALTER TABLE azure_collect_groups ADD COLUMN expiration TIMESTAMP_LTZ;
-ALTER TABLE azure_collect_groups ADD COLUMN membership_rule STRING;
-ALTER TABLE azure_collect_groups ADD COLUMN membership_rule_processing_state STRING;
-ALTER TABLE azure_collect_groups ADD COLUMN preferred_language STRING;
-ALTER TABLE azure_collect_groups ADD COLUMN theme STRING;
-~~~
-
-~~~
-ALTER TABLE azure_collect_service_principals ADD COLUMN app_description STRING;
-ALTER TABLE azure_collect_service_principals ADD COLUMN description STRING;
-ALTER TABLE azure_collect_service_principals ADD COLUMN notes STRING;
-~~~
-
-~~~
 CREATE OR REPLACE TABLE azure_collect_groups_members (
     recorded_at TIMESTAMP_LTZ,
     tenant_id VARCHAR(50),
@@ -93,8 +99,8 @@ GRANT SELECT, INSERT ON TABLE azure_collect_role_assignments TO ROLE app_snowale
 ~~~
 CREATE OR REPLACE TABLE aws_collect_iam_list_groups (
     recorded_at TIMESTAMP_LTZ,
-    error VARIANT,
     account_id STRING,
+    error VARIANT,
     path STRING,
     group_id STRING,
     group_name STRING,
@@ -106,8 +112,8 @@ GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_groups TO ROLE app_snowalert;
 
 CREATE OR REPLACE TABLE aws_collect_iam_list_attached_group_policies (
     recorded_at TIMESTAMP_LTZ,
-    error VARIANT,
     account_id STRING,
+    error VARIANT,
     group_name STRING,
     policy_name STRING,
     policy_arn STRING
@@ -119,8 +125,8 @@ GRANT SELECT, INSERT ON TABLE aws_collect_iam_list_attached_group_policies TO RO
 ~~~
 CREATE OR REPLACE TABLE aws_collect_ec2_describe_route_tables (
     recorded_at TIMESTAMP_LTZ,
-    error VARIANT,
     account_id STRING,
+    error VARIANT,
     region STRING,
     associations VARIANT,
     propagating_vgws VARIANT,
@@ -131,10 +137,4 @@ CREATE OR REPLACE TABLE aws_collect_ec2_describe_route_tables (
     owner_id STRING
 );
 GRANT SELECT, INSERT ON TABLE aws_collect_ec2_describe_route_tables TO ROLE app_snowalert;
-~~~
-
-~~~
-ALTER TABLE azure_collect_disks RENAME COLUMN managedby TO managed_by;
-ALTER TABLE azure_collect_virtual_machines_extensions DROP COLUMN subscription_id;
-ALTER TABLE azure_collect_virtual_machines_instance_view DROP COLUMN subscription_id;
 ~~~
