--- a/migrations/v1_9_4-v1_9_5.md
+++ b/migrations/v1_9_4-v1_9_5.md
@@ -1,8 +1,13 @@
+## Alert Query Runners
+
+~~~
+ALTER TABLE results.alerts ADD COLUMN id VARCHAR(50);
+~~~
+
 ## Update Azure and AWS Inventory and Configuration Connectors
 
-The new version of the connector tracks errors, adds columns for the most recent
-Azure Cloud changes. If you have a deployed default connector, you can update it
-with:
+The new version of the connector adds columns for the most recent Azure Cloud
+changes. If you have a deployed default connector, you can update it with:
 
 ~~~
 ALTER TABLE azure_collect_role_definitions ADD COLUMN display_name STRING;
@@ -18,19 +23,11 @@ ALTER TABLE azure_collect_service_principals ADD COLUMN description STRING;
 ALTER TABLE azure_collect_service_principals ADD COLUMN notes STRING;
 ~~~
 
+The new version of the connectors records errors in responses from Azure. You
+can add the columns to a deployed default connector with:
+
 ~~~
 ALTER TABLE azure_collect_connection ADD COLUMN error VARIANT;
-ALTER TABLE azure_collect_disks RENAME COLUMN managedby TO managed_by;
-ALTER TABLE azure_collect_virtual_machines_extensions DROP COLUMN subscription_id;
-ALTER TABLE azure_collect_virtual_machines_instance_view DROP COLUMN subscription_id;
-
-ALTER TABLE aws_collect_kms_get_key_rotation_status DROP COLUMN region;
-ALTER TABLE aws_collect_s3_list_buckets DROP COLUMN region;
-ALTER TABLE aws_collect_s3_get_bucket_acl DROP COLUMN region;
-ALTER TABLE aws_collect_s3_get_bucket_policy DROP COLUMN region;
-ALTER TABLE aws_collect_s3_get_bucket_logging DROP COLUMN region;
-ALTER TABLE aws_collect_cloudtrail_describe_trails DROP COLUMN region;
-ALTER TABLE aws_collect_cloudtrail_get_event_selectors DROP COLUMN region;
 ALTER TABLE aws_collect_cloudtrail_describe_trails ADD COLUMN error VARIANT;
 ALTER TABLE aws_collect_cloudtrail_get_event_selectors ADD COLUMN error VARIANT;
 ALTER TABLE aws_collect_cloudtrail_get_trail_status ADD COLUMN error VARIANT;
@@ -66,6 +63,28 @@ ALTER TABLE aws_collect_s3_get_bucket_logging ADD COLUMN error VARIANT;
 ALTER TABLE aws_collect_s3_get_bucket_policy ADD COLUMN error VARIANT;
 ALTER TABLE aws_collect_s3_list_buckets ADD COLUMN error VARIANT;
 ~~~
+
+The new version of the connector updates the following columns for consistency
+and removes vestigial collumns:
+
+~~~
+ALTER TABLE azure_collect_disks RENAME COLUMN managedby TO managed_by;
+ALTER TABLE azure_collect_virtual_machines_extensions DROP COLUMN subscription_id;
+ALTER TABLE azure_collect_virtual_machines_instance_view DROP COLUMN subscription_id;
+
+ALTER TABLE aws_collect_kms_get_key_rotation_status DROP COLUMN region;
+ALTER TABLE aws_collect_s3_list_buckets DROP COLUMN region;
+ALTER TABLE aws_collect_s3_get_bucket_acl DROP COLUMN region;
+ALTER TABLE aws_collect_s3_get_bucket_policy DROP COLUMN region;
+ALTER TABLE aws_collect_s3_get_bucket_logging DROP COLUMN region;
+ALTER TABLE aws_collect_cloudtrail_describe_trails DROP COLUMN region;
+ALTER TABLE aws_collect_cloudtrail_get_event_selectors DROP COLUMN region;
+~~~
+
+The new version of the connector collects results of az commands `list groups`,
+`groups members`, and aws commands `list attached group policies`, `role
+assignments`. To add landing tables for these to a default connector, you can
+run:
 
 ~~~
 CREATE OR REPLACE TABLE azure_collect_groups_members (
