Fix version number on the migration

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -1,7 +1,7 @@
 # Update Azure Inventory to add network interfaces table
 
 ```sql
-CREATE OR REPLACE TABLE network_interfaces (
+CREATE OR REPLACE TABLE azure_collect_network_interfaces (
     recorded_at TIMESTAMP_LTZ,
     tenant_id VARCHAR(50),
     subscription_id VARCHAR(50),
@@ -15,6 +15,6 @@ CREATE OR REPLACE TABLE network_interfaces (
     type STRING,
 );
 GRANT SELECT, INSERT
-ON network_interfaces
-TO ROLE app_snowalert;
+ON azure_collect_network_interfaces
+TO ROLE snowalert;
 ```
