--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -18,3 +18,21 @@ GRANT SELECT, INSERT
 ON azure_collect_network_interfaces
 TO ROLE snowalert;
 ```
+
+# Update AWS Collect Landing Tables
+## S3 Get Public Blocks
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_s3_get_public_access_block (
+    recorded_at TIMESTAMP_LTZ,
+    account_ID STRING,
+    error VARIANT,
+    bucket STRING,
+    ignore_public_acls BOOLEAN,
+    block_public_policy BOOLEAN,
+    block_public_acls BOOLEAN,
+    restrict_public_buckets BOOLEAN,
+);
+GRANT SELECT, INSERT
+ON data.aws_collect_s3_get_public_access_block
+TO ROLE snowalert;
+```
