--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -12,7 +12,7 @@ CREATE OR REPLACE TABLE azure_collect_network_interfaces (
     location STRING,
     properties VARIANT,
     tags VARIANT,
-    type STRING,
+    type STRING
 );
 GRANT SELECT, INSERT
 ON azure_collect_network_interfaces
@@ -25,12 +25,12 @@ TO ROLE snowalert;
 CREATE OR REPLACE TABLE data.aws_collect_s3_get_public_access_block (
     recorded_at TIMESTAMP_LTZ,
     account_ID STRING,
-    error VARIANT,
     bucket STRING,
+    error VARIANT,
     ignore_public_acls BOOLEAN,
     block_public_policy BOOLEAN,
     block_public_acls BOOLEAN,
-    restrict_public_buckets BOOLEAN,
+    restrict_public_buckets BOOLEAN
 );
 GRANT SELECT, INSERT
 ON data.aws_collect_s3_get_public_access_block
