--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -20,11 +20,11 @@ TO ROLE snowalert;
 ```
 
 # Update AWS Collect Landing Tables
-## S3 Get Public Blocks
+## S3 Get Public Access Blocks
 ```sql
 CREATE OR REPLACE TABLE data.aws_collect_s3_get_public_access_block (
     recorded_at TIMESTAMP_LTZ,
-    account_ID STRING,
+    account_id STRING,
     bucket STRING,
     error VARIANT,
     ignore_public_acls BOOLEAN,
@@ -34,5 +34,36 @@ CREATE OR REPLACE TABLE data.aws_collect_s3_get_public_access_block (
 );
 GRANT SELECT, INSERT
 ON data.aws_collect_s3_get_public_access_block
+TO ROLE snowalert;
+```
+
+## S3Control Get Public Access Blocks
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_s3control_get_public_access_block (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    error VARIANT,
+    ignore_public_acls BOOLEAN,
+    block_public_policy BOOLEAN,
+    block_public_acls BOOLEAN,
+    restrict_public_buckets BOOLEAN
+);
+GRANT SELECT, INSERT
+ON data.aws_collect_s3control_get_public_access_block
+TO ROLE snowalert;
+```
+
+## STS GetCallerIdentity
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_sts_get_caller_identity (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    error VARIANT,
+    user_id STRING,
+    account STRING,
+    arn STRING,
+);
+GRANT SELECT, INSERT
+ON data.aws_collect_sts_get_caller_identity
 TO ROLE snowalert;
 ```
