[DC] Add S3 Get Bucket Tagging

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -52,3 +52,17 @@ GRANT SELECT, INSERT
 ON data.aws_collect_s3control_get_public_access_block
 TO ROLE snowalert;
 ```
+
+## S3 Get Bucket Tagging
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_s3_get_bucket_tagging (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    bucket STRING,
+    error VARIANT,
+    tag_set VARIANT
+);
+GRANT SELECT, INSERT
+ON data.aws_collect_s3_get_bucket_tagging
+TO ROLE snowalert;
+```
