--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -66,3 +66,24 @@ GRANT SELECT, INSERT
 ON data.aws_collect_s3_get_bucket_tagging
 TO ROLE snowalert;
 ```
+
+## EC2 Describe NAT Gateways
+```sql
+CREATE OR REPLACE TABLE aws_collect_ec2_describe_nat_gateways (
+  recorded_at TIMESTAMP_LTZ,
+  account_id STRING,
+  region STRING,
+  error VARIANT,
+  nat_gateway_addresses VARIANT,
+  vpc_id STRING,
+  tags VARIANT,
+  state STRING,
+  nat_gateway_id STRING,
+  subnet_id STRING,
+  create_time TIMESTAMP_LTZ
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_ec2_describe_nat_gateways
+TO ROLE snowalert;
+```
