--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -87,3 +87,38 @@ GRANT SELECT, INSERT
 ON data.aws_collect_ec2_describe_nat_gateways
 TO ROLE snowalert;
 ```
+
+## EC2 Describe Network Interfaces
+```
+CREATE OR REPLACE TABLE aws_collect_ec2_describe_network_interfaces (
+  recorded_at TIMESTAMP_LTZ,
+  account_id STRING,
+  region STRING,
+  error VARIANT,
+  attachment VARIANT,
+  association VARIANT,
+  availability_zone STRING,
+  description STRING,
+  groups VARIANT,
+  interface_type STRING,
+  ipv6_addresses VARIANT,
+  mac_address STRING,
+  network_interface_id STRING,
+  outpost_arn STRING,
+  owner_id STRING,
+  private_ip_address STRING,
+  private_dns_name STRING,
+  private_ip_addresses VARIANT,
+  requester_id STRING,
+  requester_managed BOOLEAN,
+  source_dest_check BOOLEAN,
+  status STRING,
+  subnet_id STRING,
+  tag_set VARIANT,
+  vpc_id STRING
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_ec2_describe_network_interfaces
+TO ROLE snowalert;
+```
