--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -89,7 +89,7 @@ TO ROLE snowalert;
 ```
 
 ## EC2 Describe Network Interfaces
-```
+```sql
 CREATE OR REPLACE TABLE aws_collect_ec2_describe_network_interfaces (
   recorded_at TIMESTAMP_LTZ,
   account_id STRING,
