--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -122,3 +122,55 @@ GRANT SELECT, INSERT
 ON data.aws_collect_ec2_describe_network_interfaces
 TO ROLE snowalert;
 ```
+
+## EFS Describe File Systems & Mount Targets
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_efs_describe_file_systems (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    region STRING,
+    error VARIANT,
+    owner_id STRING,
+    creation_token STRING,
+    file_system_id STRING,
+    file_system_arn STRING,
+    creation_time TIMESTAMP_LTZ,
+    life_cycle_state STRING,
+    name STRING,
+    number_of_mount_targets INTEGER,
+    size_in_bytes VARIANT,
+    performance_mode STRING,
+    encrypted BOOLEAN,
+    kms_key_id STRING,
+    throughput_mode STRING,
+    provisioned_throughput_in_mibps DOUBLE,
+    tags VARIANT
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_efs_describe_file_systems
+TO ROLE snowalert
+;
+
+CREATE OR REPLACE TABLE data.aws_collect_efs_describe_mount_targets (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    region STRING,
+    error VARIANT,
+    owner_id STRING,
+    mount_target_id STRING,
+    file_system_id STRING,
+    subnet_id STRING,
+    life_cycle_state STRING,
+    ip_address STRING,
+    network_interface_id STRING,
+    availability_zone_id STRING,
+    availability_zone_name STRING,
+    vpc_id STRING
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_efs_describe_mount_targets
+TO ROLE snowalert
+;
+```
