[dc] Add iam_get_account_authorization_details to AWSIC

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -174,3 +174,45 @@ ON data.aws_collect_efs_describe_mount_targets
 TO ROLE snowalert
 ;
 ```
+
+## IAM Get Account Authorization Details
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_iam_get_account_authorization_details (
+  recorded_at TIMESTAMP_LTZ,
+  account_id STRING,
+  error VARIANT,
+  arn STRING,
+  assume_role_policy_document VARIANT,
+  attached_managed_policies VARIANT,
+  attachment_count NUMBER,
+  create_date TIMESTAMP,
+  default_version_id STRING,
+  description STRING,
+  group_id STRING,
+  group_list VARIANT,
+  group_name STRING,
+  group_policy_list VARIANT,
+  instance_profile_list VARIANT,
+  is_attachable BOOLEAN,
+  path STRING,
+  permissions_boundary VARIANT,
+  permissions_boundary_usage_count NUMBER,
+  policy_id STRING,
+  policy_name STRING,
+  policy_version_list VARIANT,
+  role_id STRING,
+  role_last_used VARIANT,
+  role_name STRING,
+  role_policy_list VARIANT,
+  tags VARIANT,
+  update_date TIMESTAMP,
+  user_id STRING,
+  user_name STRING,
+  user_policy_list VARIANT
+);
+
+GRANT SELECT, INSERT
+ON data.aws_collect_iam_get_account_authorization_details
+TO ROLE app_snowalert
+;
+```
