--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -216,3 +216,32 @@ ON data.aws_collect_iam_get_account_authorization_details
 TO ROLE app_snowalert
 ;
 ```
+
+## EC2 DESCRIBE SNAPSHOTS 
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_ec2_describe_snapshots (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    region STRING,
+    error VARIANT,
+    description STRING,
+    encrypted BOOLEAN,
+    kms_key_id STRING,
+    owner_id STRING,
+    progress STRING,
+    snapshot_id STRING,
+    start_time TIMESTAMP_LTZ,
+    state STRING,
+    state_message STRING,
+    volume_id STRING,
+    volume_size NUMBER,
+    owner_alias STRING,
+    outpost_arn STRING,
+    tags VARIANT
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_ec2_describe_snapshots
+TO ROLE snowalert
+;
+```
