some final touches

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -217,13 +217,14 @@ TO ROLE app_snowalert
 ;
 ```
 
-## EC2 DESCRIBE SNAPSHOTS 
+## EC2 Describe Snapshots 
 ```sql
 CREATE OR REPLACE TABLE data.aws_collect_ec2_describe_snapshots (
     recorded_at TIMESTAMP_LTZ,
     account_id STRING,
     region STRING,
     error VARIANT,
+    data_encryption_key_id STRING,
     description STRING,
     encrypted BOOLEAN,
     kms_key_id STRING,
