[dispatcher] optimize updating of alerts table

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -1,3 +1,15 @@
+# Update Alerts table to support large numbers of alerts
+
+```sql
+ALTER TABLE results.alerts ADD COLUMN alert_id VARCHAR(36);
+ALTER TABLE results.alerts ADD SEARCH OPTIMIZATION;
+
+UPDATE results.alerts
+SET alert_id = alert['ALERT_ID']
+WHERE alert_id IS NULL
+;
+```
+
 # Update Azure Inventory to add network interfaces table
 
 ```sql
@@ -217,7 +229,7 @@ TO ROLE app_snowalert
 ;
 ```
 
-## EC2 Describe Snapshots 
+## EC2 Describe Snapshots
 ```sql
 CREATE OR REPLACE TABLE data.aws_collect_ec2_describe_snapshots (
     recorded_at TIMESTAMP_LTZ,
