--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -10,6 +10,12 @@ WHERE alert_id IS NULL
 ;
 ```
 
+# Update Azure Collect Users table to add raw col
+
+```sql
+ALTER TABLE azure_collect_users ADD COLUMN raw VARIANT;
+```
+
 # Update Azure Inventory to add network interfaces table
 
 ```sql
