[Fix] Added migration specifications for new AWS user/group/role tables

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -258,3 +258,70 @@ ON data.aws_collect_ec2_describe_snapshots
 TO ROLE snowalert
 ;
 ```
+
+## Get AWS User Inline Policy Documents
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_iam_get_user_policy (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    policy_name STRING,
+    user_name STRING,
+    error VARIANT,
+    policy_document STRING,
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_iam_get_user_policy
+TO ROLE snowalert
+;
+```
+
+## Get AWS Group Inline Policy List
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_iam_list_group_policies (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    group_name STRING,
+    error VARIANT,
+    policy_name STRING,
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_iam_list_group_policies
+TO ROLE snowalert
+;
+```
+
+## Get AWS Group Inline Policy Documents
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_iam_get_group_policy (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    policy_name STRING,
+    group_name STRING,
+    error VARIANT,
+    policy_document STRING,
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_iam_get_group_policy
+TO ROLE snowalert
+;
+```
+
+## Get AWS Role Managed Policies
+```sql
+CREATE OR REPLACE TABLE data.aws_collect_iam_list_attached_role_policies (
+    recorded_at TIMESTAMP_LTZ,
+    account_id STRING,
+    role_name STRING,
+    error VARIANT,
+    policy_name STRING,
+    policy_arn STRING,
+)
+;
+GRANT SELECT, INSERT
+ON data.aws_collect_iam_list_attached_role_policies
+TO ROLE snowalert
+;
+```
