[FIX] Got rid of trailing commas in SQL

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -267,7 +267,7 @@ CREATE OR REPLACE TABLE data.aws_collect_iam_get_user_policy (
     policy_name STRING,
     user_name STRING,
     error VARIANT,
-    policy_document STRING,
+    policy_document STRING
 )
 ;
 GRANT SELECT, INSERT
@@ -283,7 +283,7 @@ CREATE OR REPLACE TABLE data.aws_collect_iam_list_group_policies (
     account_id STRING,
     group_name STRING,
     error VARIANT,
-    policy_name STRING,
+    policy_name STRING
 )
 ;
 GRANT SELECT, INSERT
@@ -300,7 +300,7 @@ CREATE OR REPLACE TABLE data.aws_collect_iam_get_group_policy (
     policy_name STRING,
     group_name STRING,
     error VARIANT,
-    policy_document STRING,
+    policy_document STRING
 )
 ;
 GRANT SELECT, INSERT
@@ -317,7 +317,7 @@ CREATE OR REPLACE TABLE data.aws_collect_iam_list_attached_role_policies (
     role_name STRING,
     error VARIANT,
     policy_name STRING,
-    policy_arn STRING,
+    policy_arn STRING
 )
 ;
 GRANT SELECT, INSERT
