Add migration, test, fix missing col's

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -37,6 +37,30 @@ ON azure_collect_network_interfaces
 TO ROLE snowalert;
 ```
 
+# Update Azure Inventory to add public IP addresses table
+
+```sql
+CREATE OR REPLACE TABLE data.azure_collect_public_ip_addresses (
+    recorded_at TIMESTAMP_LTZ,
+    tenant_id VARCHAR(50),
+    subscription_id VARCHAR(50),
+    error VARIANT,
+    etag STRING,
+    extended_location VARIANT,
+    id STRING,
+    location STRING,
+    name STRING,
+    properties VARIANT,
+    sku VARIANT,
+    tags VARIANT,
+    type STRING,
+    zones VARIANT
+);
+GRANT SELECT, INSERT
+ON data.azure_collect_public_ip_addresses
+TO ROLE snowalert;
+```
+
 # Update AWS Collect Landing Tables
 ## S3 Get Public Access Blocks
 ```sql
