Add managed_by column to AzIC NICs table

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -30,7 +30,8 @@ CREATE OR REPLACE TABLE azure_collect_network_interfaces (
     location STRING,
     properties VARIANT,
     tags VARIANT,
-    type STRING
+    type STRING,
+    managed_by STRING
 );
 GRANT SELECT, INSERT
 ON azure_collect_network_interfaces
