Add raw column to azure_collect_pricings

--- a/migrations/v1_9_6-v1_10_0.md
+++ b/migrations/v1_9_6-v1_10_0.md
@@ -10,6 +10,12 @@ WHERE alert_id IS NULL
 ;
 ```
 
+# Update Azure Collect Pricings table to add raw col
+
+```sql
+ALTER TABLE azure_collect_pricings ADD COLUMN raw VARIANT;
+```
+
 # Update Azure Collect Users table to add raw col
 
 ```sql
